[package]
name = "nostd-testcrate"
version = "0.1.0"
authors = ["Aleksandr Orlenko <zxteam@protonmail.com>"]

[features]
lua54 = []
lua53 = []
lua52 = []
lua51 = []

[build-dependencies.lua-src]
path = ".."
features = ["ucid"]
default-features = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
